--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,12 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+
+.flex {
+  display: block;
+  width: 100%;
+}
